# C-Address-Onboarding-Bridge-Backend

./: .env.example  .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
contracts/onboarding-bridge/: Cargo.toml
contracts/onboarding-bridge/src/: lib.rs  test.rs
contracts/onboarding-bridge/test_snapshots/test/: test_approve_increases_count.1.json  test_double_approve_rejected.1.json  test_double_initialize.1.json  test_double_initialize.2.json  test_execute_with_threshold.1.json  test_full_scenario.1.json  test_fund_c_address.1.json  test_fund_c_address_blocked_when_paused.1.json  test_fund_c_address_negative_amount.1.json  test_fund_c_address_tracks_fees.1.json  test_fund_c_address_zero_amount.1.json  test_fund_with_zero_fee.1.json  test_get_active_proposals.1.json  test_get_admins_returns_correct_list.1.json  test_initial_state.1.json  test_initial_state.2.json  test_initialize.1.json  test_initialize.2.json  test_is_paused_initial_state.1.json  test_max_fee_bps_immutable_after_init.1.json  test_multiple_fund_accumulates_fees.1.json  test_non_admin_cannot_approve.1.json  test_non_admin_cannot_propose.1.json  test_pause_and_unpause.1.json  test_pause_event_emitted.1.json  test_pause_unpause.1.json  test_proposal_expiry.1.json  test_proposal_withdraw_all_fees.1.json  test_proposal_withdraw_excessive_fees_rejected.1.json  test_proposal_withdraw_fees_execution.1.json  test_propose_creates_proposal.1.json  test_route_from_exchange.1.json  test_route_from_exchange_blocked_when_paused.1.json  test_set_fee.1.json  test_set_fee.2.json  (+12 more)
(+31 files in other folders)
